feat: remove OpenAI dependency entirely - use free ChromaDB embeddings
- Replaced OpenAI embeddings with ChromaDB built-in DefaultEmbeddingFunction
- Uses all-MiniLM-L6-v2 model via ONNX runtime (completely free, no API key)
- Only GROQ_API_KEY needed now - safe to make app public
- Removed langchain-openai from requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ streamlit
 langgraph
 langchain
 langchain-groq
-langchain-openai
 langchain-core
 langchain-text-splitters
 langgraph-checkpoint-sqlite
@@ -12,3 +11,4 @@ tiktoken
 numpy
 scikit-learn
 python-dotenv
+onnxruntime
